--- a/teaching.html
+++ b/teaching.html
@@ -38,6 +38,8 @@
 	<p>
 	 <p>
         <ul>
+		 <li> In Fall 2025 at UCLA, I was a TA for CS 495 (Teaching Assistant Training Seminar) for teh Computer Science department, taught by Prof. Sandra Batista. I worked with about 75 students/future TAs, helped grade assignments and handled course logistics, provided feedack on current new TAs, and hosted office hours to support students. Through this TA-ship, I was granted the year long role of TA Coordinator where I manage and support TAs for the 2025-2026 academic year.</li>
+			
           <li> In Spring 2025 at UCLA, I was a TA for CS131 (Programming Languages), taught by Prof. Paul Eggert. I worked with a team of 1 other TA, 4 LAs,  and about 120 students,  helped grade assignments and exams led weekly discussion sections, and hosted office hours to support students. </li>
       	  <li> In Winter 2025 at UCLA, I was a TA for CS131 (Programming Languages), taught by Prof. Paul Eggert. I worked with a team of 1 other TA, 4 LAs, and about 150 students, helped grade assignments and exams led weekly discussion sections, and hosted office hours to support students. </li>
       	  <li> In Fall 2024 at UCLA, I was a TA for CS180 (Algorithms and Complexity), taught by Alexis Korb. I worked with a team of 2 other TAs and about 240 students, helped grade assignments and exams, led weekly discussion sections, and hosted office hours to support students. </li>
