--- a/index.html
+++ b/index.html
@@ -1,197 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Christina Chance</title>
-  <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+    <title>Christina Chance</title>
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon.png">
+    <link href="//fonts.googleapis.com/css?family=Raleway:100,400,300,600" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic|Source+Sans+Pro:400,700,200,300|Josefin+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
 
-  <link href="https://fonts.googleapis.com/css?family=Raleway:100,400,300,600" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700,400italic,700italic|Source+Sans+Pro:400,700,200,300|Josefin+Sans:400,600,700,300" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/style.css">
 
-  <link rel="stylesheet" href="assets/css/style.css">
-
-  <style>
-    /* --- General Layout --- */
-    body {
-      font-family: 'Source Sans Pro', sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    .wrapper {
-      max-width: 1000px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
-    /* --- Fixed Navigation --- */
-    .header-top {
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background-color: white;
-      border-bottom: 1px solid #ddd;
-      z-index: 1000;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 15px 30px;
-    }
-
-    .header-name {
-      font-size: 1.4em;
-      font-weight: bold;
-    }
-
-    .header-nav ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      gap: 20px;
-    }
-
-    .header-nav a {
-      text-decoration: none;
-      color: black;
-      font-weight: bold;
-    }
-
-    .header-nav a:hover {
-      text-decoration: underline;
-    }
-
-    /* --- Content Area --- */
-    .content {
-      display: flex;
-      flex-wrap: wrap;
-      margin-top: 120px; /* space for fixed nav */
-      gap: 40px;
-      align-items: flex-start;
-      justify-content: center;
-    }
-
-    .profile-section {
-      flex: 1 1 300px;
-      text-align: center;
-    }
-
-    .headshot-wrapper img {
-      width: 220px;
-      height: 220px;
-      object-fit: cover;
-      border-radius: 50%;
-      margin-bottom: 15px;
-    }
-
-    .profile-section h1 {
-      margin: 10px 0 5px 0;
-    }
-
-    .bio-section {
-      flex: 2 1 500px;
-      font-size: 1rem;
-      line-height: 1.6;
-    }
-
-    /* --- Footer / Acknowledgement --- */
-    footer {
-      text-align: center;
-      margin-top: 50px;
-      font-size: 0.9rem;
-    }
-
-    /* --- Responsive Design --- */
-    @media (max-width: 768px) {
-      .content {
-        flex-direction: column;
-        align-items: center;
+    <style>
+      body {
+        font-family: 'Source Sans Pro', sans-serif;
+        margin: 0;
+        padding: 0;
       }
 
-      .bio-section {
-        width: 100%;
-        text-align: left;
+      .wrapper {
+        max-width: 1000px;
+        margin: 0 auto;
+        padding: 20px;
       }
 
+      /* --- Keep navigation at the top --- */
       .header-top {
-        flex-direction: column;
+        position: sticky;
+        top: 0;
+        background-color: white;
+        z-index: 999;
+        padding: 10px 0;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
         align-items: center;
-        gap: 10px;
+        border-bottom: 1px solid #ddd;
+      }
+
+      .header-name p {
+        margin: 0;
+        font-size: 1.5em;
+        font-weight: bold;
       }
 
       .header-nav ul {
-        flex-direction: column;
-        align-items: center;
-        gap: 10px;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        gap: 20px;
       }
-    }
-  </style>
-</head>
 
-<body>
-  <div class="wrapper">
+      .header-nav a {
+        text-decoration: none;
+        color: black;
+      }
 
-    <div class="header-top">
-      <div class="header-name">Christina Chance</div>
-      <div class="header-nav">
-        <ul>
-          <li><a href="index.html">About</a></li>
-          <li><a href="research.html">Research</a></li>
-          <li><a href="teaching.html">Teaching</a></li>
-        </ul>
-      </div>
-    </div>
+      .header-nav a:hover {
+        text-decoration: underline;
+      }
 
-    <div class="content">
-      <div class="profile-section">
-        <div class="headshot-wrapper">
-          <img src="assets/images/headshot25_2.jpeg" alt="Christina Chance">
+      /* --- Content layout --- */
+      .float-container {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+        align-items: flex-start;
+        justify-content: center;
+        margin-top: 30px;
+      }
+
+      .float-child-left, .float-child-right {
+        flex: 1 1 400px;
+      }
+
+      .float-child-left {
+        text-align: center;
+      }
+
+      .headshot-wrapper img {
+        width: 220px;
+        height: 220px;
+        object-fit: cover;
+        border-radius: 50%;
+        margin-bottom: 15px;
+      }
+
+      h1 {
+        margin: 10px 0 5px 0;
+      }
+
+      .float-child-right p {
+        line-height: 1.6;
+      }
+
+      /* --- Responsive layout --- */
+      @media (max-width: 768px) {
+        .float-container {
+          flex-direction: column;
+          align-items: center;
+        }
+
+        .float-child-left, .float-child-right {
+          width: 100%;
+          text-align: left;
+        }
+
+        .float-child-left {
+          order: 1;
+        }
+
+        .float-child-right {
+          order: 2;
+        }
+
+        .header-top {
+          flex-direction: column;
+          align-items: center;
+        }
+
+        .header-nav ul {
+          flex-direction: column;
+          align-items: center;
+          gap: 10px;
+        }
+      }
+    </style>
+  </head>
+
+  <body>
+    <div class="wrapper">
+
+      <div class="float-container">
+        <div class="buttons">
+          <div class="header-top">
+            <div class="header-name">
+              <p><b>Christina Chance</b></p>
+            </div>
+            <div class="header-nav">
+              <ul>
+                <li><a href="index.html"><b>About</b></a></li>
+                <li><a href="research.html"><b>Research</b></a></li>
+                <li><a href="teaching.html"><b>Teaching</b></a></li>
+              </ul>
+            </div>
+          </div>
         </div>
-        <h1>Christina Chance</h1>
-        <p>cchance [at] cs.ucla.edu</p>
-        <p>
-          <a href="https://github.com/christinachance/" target="_blank">Github</a> |
-          <a href="https://www.linkedin.com/in/christina-chance-147666166/" target="_blank">LinkedIn</a> |
-          <a href="https://scholar.google.com/citations?user=btfwlCAAAAAJ&hl=en" target="_blank">Google Scholar</a> |
-          <a href="/assets/documents/Christina_Chance_CV.pdf" target="_blank">Curriculum Vitae</a>
-        </p>
+
+        <div class="float-child-left">
+          <div class="headshot-wrapper">
+            <img src="assets/images/headshot25_2.jpeg" alt="Christina Chance">
+          </div>
+          <h1>Christina Chance</h1>
+          <p>cchance [at] cs.ucla.edu</p>
+          <p>
+            <a href="https://github.com/christinachance/" target="_blank">Github</a> |
+            <a href="https://www.linkedin.com/in/christina-chance-147666166/" target="_blank">LinkedIn</a> |
+            <a href="https://scholar.google.com/citations?user=btfwlCAAAAAJ&hl=en" target="_blank">Google Scholar</a> |
+            <a href="/assets/documents/Christina_Chance_CV.pdf" target="_blank">Curriculum Vitae</a>
+          </p>
+        </div>
+
+        <div class="float-child-right">
+          <p>Hello, I’m Christina!</p>
+          <p>
+            I am a fourth-year PhD candidate in Computer Science at the University of California, Los Angeles advised by
+            <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank" rel="noopener noreferrer">Kai-Wei Chang</a>.
+            I am supported by the
+            <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-entering-students/eugene-v-cota-robles-fellowship/" target="_blank">Eugene V. Cota-Robles Fellowship</a>
+            and the <a href="https://www.gemfellowship.org/" target="_blank">GEM Fellowship Program</a>.
+          </p>
+          <p>
+            My research focuses on (1) the application of NLP methodologies for bias mitigation and quantification in
+            social science, (2) the study of dialectical biases in existing machine learning systems, and (3) the
+            assessment and development of community grounded content moderation approaches. This culminates under the goal
+            of engaging with, studying, assessing, and critiquing socio-technical systems that people engage with in their
+            everyday lives as well as developing more inclusive and equitable systems.
+          </p>
+          <p>Beyond this work, I love doing community service and watching anime!</p>
+        </div>
       </div>
 
-      <div class="bio-section">
-        <p>Hello, I’m Christina!</p>
+      <br>
+      <div style="text-align:center;">
         <p>
-          I am a fourth-year PhD candidate in Computer Science at the University of California, Los Angeles advised by
-          <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank" rel="noopener noreferrer">Kai-Wei Chang</a>.
-          I am supported by the
-          <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-entering-students/eugene-v-cota-robles-fellowship/" target="_blank">Eugene V. Cota-Robles Fellowship</a>
-          and the <a href="https://www.gemfellowship.org/" target="_blank">GEM Fellowship Program</a>.
+          <i>Acknowledgement: This website uses the design and template from
+          <a href="https://rpattichis.github.io/index.html" target="_blank" rel="noopener noreferrer">Rebecca Pattichis</a>,
+          <a href="https://cs.stanford.edu/~ssagawa/" target="_blank" rel="noopener noreferrer">Shiori Sagawa</a>, and
+          <a href="https://amitakamath.github.io/" target="_blank" rel="noopener noreferrer">Amita Kamath</a>.</i>
         </p>
-        <p>
-          My research focuses on (1) the application of NLP methodologies for bias mitigation and quantification in
-          social science, (2) the study of dialectical biases in existing machine learning systems, and (3) the
-          assessment and development of community grounded content moderation approaches. This culminates under the goal
-          of engaging with, studying, assessing, and critiquing socio-technical systems that people engage with in their
-          everyday lives as well as developing more inclusive and equitable systems.
-        </p>
-        <p>Beyond this work, I love doing community service and watching anime!</p>
       </div>
     </div>
-
-    <footer>
-      <p>
-        <i>
-          Acknowledgement: This website uses the design and template from
-          <a href="https://rpattichis.github.io/index.html" target="_blank">Rebecca Pattichis</a>,
-          <a href="https://cs.stanford.edu/~ssagawa/" target="_blank">Shiori Sagawa</a>, and
-          <a href="https://amitakamath.github.io/" target="_blank">Amita Kamath</a>.
-        </i>
-      </p>
-    </footer>
-
-  </div>
-</body>
+  </body>
 </html>
