--- a/index.html
+++ b/index.html
@@ -31,9 +31,6 @@
             </div>
           </div>
         </div>
-
-        <br>
-
         <div class="float-child-left" style="text-align:center;">
           <!-- Headshot section -->
           <div class="headshot-wrapper">
@@ -49,6 +46,25 @@
             <a href="/assets/documents/Christina_Chance_CV.pdf" target="_blank" rel="noopener noreferrer">Curriculum Vitae</a>
           </p>
         </div>
+
+
+        <br>
+
+        <!-- <div class="float-child-left" style="text-align:center;">
+          <!-- Headshot section -->
+          <!-- <div class="headshot-wrapper">
+            <img src="assets/images/headshot25_2.jpeg" alt="Christina Chance">
+          </div>
+
+          <h1>Christina Chance</h1>
+          <p>cchance [at] cs.ucla.edu</p>
+          <p>
+            <a href="https://github.com/christinachance/" target="_blank" rel="noopener noreferrer">Github</a> |
+            <a href="https://www.linkedin.com/in/christina-chance-147666166/" target="_blank" rel="noopener noreferrer">LinkedIn</a> |
+            <a href="https://scholar.google.com/citations?user=btfwlCAAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Google Scholar</a> |
+            <a href="/assets/documents/Christina_Chance_CV.pdf" target="_blank" rel="noopener noreferrer">Curriculum Vitae</a>
+          </p> -->
+        <!-- </div> --> -->
 
         <div class="float-child-right">
           <div>
