Update and rename index.html to index_good_ish.html

--- a/index_good_ish.html
+++ b/index_good_ish.html
@@ -62,7 +62,7 @@
             <a href="https://scholar.google.com/citations?user=btfwlCAAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Google Scholar</a> |
             <a href="/assets/documents/Christina_Chance_CV.pdf" target="_blank" rel="noopener noreferrer">Curriculum Vitae</a>
           </p> -->
-        <!-- </div> --> -->
+        <!-- </div> -->
 
         <div class="float-child-right">
           <div>
