--- a/research.html
+++ b/research.html
@@ -71,7 +71,7 @@
 	<span class="title" style="font-weight:400">CORAAL QA: A Dataset and Framework for Open Domain Spontaneous Speech Question Answering from Long Audio Files 
           </span>
           </span>
-          <span>Natarajan Balaji Shankar, Alexander Johnson, C<u>Christina Chance</u>, Hariram Veeramani, Abeer Alwan</a></span>
+          <span>Natarajan Balaji Shankar, Alexander Johnson, <u>Christina Chance</u>, Hariram Veeramani, Abeer Alwan</a></span>
           <span>ICASSP 2024</span>
 	  	  <span>[<a href="https://ieeexplore.ieee.org/document/10447109/" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
     <br>
