--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <div class="float-container" style="margin-top:40px;">
           <div class="buttons">
             <div class="header-top">
-              <div class="header-name">
+              <!-- <div class="header-name">
                 <p style="font-size:150%;"><b>Christina Chance</b></p>
-              </div>
+              </div> -->
               <div class="header-nav">
                 <ul>
                   <li><a href="index.html"><b>About</b></a></li>
@@ -52,6 +52,8 @@
                   <li><a href="teaching.html"><b>Teaching</b></a></li>
                 </ul>
               </div>
+              
+              <br>
 
               <div class="headshot-wrapper">
                 <img src="assets/images/headshot25_2.jpeg" alt="Christina Chance">
@@ -65,6 +67,24 @@
                 <a href="https://scholar.google.com/citations?user=btfwlCAAAAAJ&hl=en" target="_blank" rel="noopener noreferrer">Google Scholar</a> |
                 <a href="/assets/documents/Christina_Chance_CV.pdf" target="_blank" rel="noopener noreferrer">Curriculum Vitae</a>
               </p>
+            </div>
+            <div class="float-child-right">
+              <div>
+                <p>Hello, I’m Christina!</p>
+                <p>
+                  I am a fourth-year PhD candidate in Computer Science at the University of California, Los Angeles advised by
+                  <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank" rel="noopener noreferrer">Kai-Wei Chang</a>.
+                  I am supported by the
+                  <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-entering-students/eugene-v-cota-robles-fellowship/" target="_blank" rel="noopener noreferrer">Eugene V. Cota-Robles Fellowship</a>
+                  and the
+                  <a href="https://www.gemfellowship.org/" target="_blank" rel="noopener noreferrer">GEM Fellowship Program</a>.
+                  My research focuses on (1) the application of NLP methodologies for bias mitigation and quantification in social science,
+                  (2) the study of dialectical biases in existing machine learning systems, and (3) the assessment and development of community grounded content moderation approaches.
+                  This culminates under the goal of engaging with, studying, assessing, and critiquing socio-technical systems that people engage with in their everyday lives
+                  as well as developing more inclusive and equitable systems.
+                </p>
+                <p>Beyond this work, I love doing community service and watching anime!</p>
+              </div>
             </div>
           </div>
         </div>
@@ -88,6 +108,8 @@
                 </ul>
               </div>
             </div>
+
+            <br>
 
             <div class="float-child-left" style="text-align:center;">
               <!-- Headshot section -->
