--- a/research.html
+++ b/research.html
@@ -15,7 +15,22 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body class="wrapper">
- <div class="float-container" style="margin-top:40px;">
+	 <div class="float-container" style="margin-top:40px;">
+          <div class="buttons">
+            <div class="header-top">
+              <div class="header-name">
+                <p style="font-size:150%;"><b>Christina Chance</b></p>
+              </div>
+              <div class="header-nav">
+                <ul>
+                  <li><a href="index.html"><b>About</b></a></li>
+                  <li><a href="research.html"><b>Research</b></a></li>
+                  <li><a href="teaching.html"><b>Teaching</b></a></li>
+                </ul>
+              </div>
+              
+              <br>
+ <!-- <div class="float-container" style="margin-top:40px;">
 <div class="buttons">
 	<div class="float-child-left" style="text-align:center;">
 		<p style="font-size:150%;"><b>Christina Chance</b></p>
@@ -27,10 +42,10 @@
 	  <li><a style="font-size:120%;" href="teaching.html"><b>Teaching</b></a></li>
 	</ul>
 	   <!--<p ><a style="font-size:150%;" href="index.html"><b>About</b></a> | <a style="font-size:150%;" href="research.html"><b>Research</b></a> | <a style="font-size:150%;" href="art.html"><b>Art</b></a></p>-->
-  	</div>
+  	<!-- </div>
 	</div>
  </div>
-	<br>
+	<br> --> 
 	 
   <h2>Publications</h2>
   <div>
