--- a/research.html
+++ b/research.html
@@ -28,8 +28,9 @@
                   <li><a href="teaching.html"><b>Teaching</b></a></li>
                 </ul>
               </div>
-              
-              <br>
+            </div>
+		</div>
+     <br>
  <!-- <div class="float-container" style="margin-top:40px;">
 <div class="buttons">
 	<div class="float-child-left" style="text-align:center;">
