--- a/teaching.html
+++ b/teaching.html
@@ -14,7 +14,7 @@
 
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body class="wrapper">
+<!-- <body class="wrapper">
  <div class="float-container" style="margin-top:40px;">
 <div class="buttons">
 	<div class="float-child-left" style="text-align:center;">
@@ -28,11 +28,29 @@
 	  
 	</ul>
 	   <!--<p ><a style="font-size:150%;" href="index.html"><b>About</b></a> | <a style="font-size:150%;" href="research.html"><b>Research</b></a> | <a style="font-size:150%;" href="art.html"><b>Art</b></a></p>-->
-  	</div>
+  	<!-- </div>
 	</div>
  </div>
-	<br>
-	 
+	<br> -->
+<body class="wrapper">
+ <div class="float-container" style="margin-top:40px;">
+	  <div class="buttons">
+		<div class="header-top">
+		  <div class="header-name">
+			<p style="font-size:150%;"><b>Christina Chance</b></p>
+		  </div>
+		  <div class="header-nav">
+			<ul>
+			  <li><a href="index.html"><b>About</b></a></li>
+			  <li><a href="research.html"><b>Research</b></a></li>
+			  <li><a href="teaching.html"><b>Teaching</b></a></li>
+			</ul>
+		  </div>
+		</div>
+	</div>
+ <br>
+
+		 
   <h2>Teaching Assistantship</h2>
   <div>
 	<p>
