--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <a href="/assets/documents/Christina_Chance_CV.pdf" target="_blank" rel="noopener noreferrer">Curriculum Vitae</a>
               </p>
             </div>
-            <div class="float-child-right">
+            <div>
               <div>
                 <p>Hello, I’m Christina!</p>
                 <p>
