--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Mobile layout -->
     <div class="small-screen">
       <div class="wrapper">
-        <div class="float-container" style="margin-top:40px;">
+        <div style="margin-top:40px;">
           <div class="buttons">
             <div class="header-top">
               <!-- <div class="header-name">
