--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
         <div class="float-container" style="margin-top:40px;">
           <div class="buttons">
             <div class="header-top">
-              <!-- <div class="header-name">
-                <p style="font-size:150%;"><b>Christina Chance</b></p>
-              </div> -->
+              <div class="header-name">
+                <p style="font-size:150%;"><b></b></p>
+              </div>
               <div class="header-nav">
                 <ul>
                   <li><a href="index.html"><b>About</b></a></li>
