--- a/teaching.html
+++ b/teaching.html
@@ -55,18 +55,58 @@
   <div>
 	<p>
 	 <p>
-        <ul>
-		 <li> In Fall 2025 at UCLA, I was a TA for CS 495 (Teaching Assistant Training Seminar) for teh Computer Science department, taught by Prof. Sandra Batista. I worked with about 75 students/future TAs, helped grade assignments and handled course logistics, provided feedack on current new TAs, and hosted office hours to support students. Through this TA-ship, I was granted the year long role of TA Coordinator where I manage and support TAs for the 2025-2026 academic year.</li>
-			
-          <li> In Spring 2025 at UCLA, I was a TA for CS131 (Programming Languages), taught by Prof. Paul Eggert. I worked with a team of 1 other TA, 4 LAs,  and about 120 students,  helped grade assignments and exams led weekly discussion sections, and hosted office hours to support students. </li>
-      	  <li> In Winter 2025 at UCLA, I was a TA for CS131 (Programming Languages), taught by Prof. Paul Eggert. I worked with a team of 1 other TA, 4 LAs, and about 150 students, helped grade assignments and exams led weekly discussion sections, and hosted office hours to support students. </li>
-      	  <li> In Fall 2024 at UCLA, I was a TA for CS180 (Algorithms and Complexity), taught by Alexis Korb. I worked with a team of 2 other TAs and about 240 students, helped grade assignments and exams, led weekly discussion sections, and hosted office hours to support students. </li>
+        <ul class="ta-experience">
+		  <li>
+		    <strong>Fall 2025 – UCLA</strong><br>
+		    <em>CS 495: Teaching Assistant Training Seminar</em> — Prof. Sandra Batista<br>
+		    Worked with ~75 students/future TAs, graded assignments, handled course logistics, provided feedback to new TAs, and hosted office hours.  
+		    Appointed year-long <strong>TA Coordinator</strong> (2025–2026).
+		  </li>
+		
+		  <li>
+		    <strong>Spring 2025 – UCLA</strong><br>
+		    <em>CS 131: Programming Languages</em> — Prof. Paul Eggert<br>
+		    Worked with 1 other TA, 4 LAs, and ~120 students. Graded assignments and exams, led weekly discussion sections, and hosted office hours.
+		  </li>
+		
+		  <li>
+		    <strong>Winter 2025 – UCLA</strong><br>
+		    <em>CS 131: Programming Languages</em> — Prof. Paul Eggert<br>
+		    Worked with 1 other TA, 4 LAs, and ~150 students. Graded assignments and exams, led weekly discussion sections, and hosted office hours.
+		  </li>
+		
+		  <li>
+		    <strong>Fall 2024 – UCLA</strong><br>
+		    <em>CS 180: Algorithms and Complexity</em> — Alexis Korb<br>
+		    Worked with 2 other TAs and ~240 students. Graded assignments and exams, led weekly discussion sections, and hosted office hours.
+		  </li>
+		
+		  <li>
+		    <strong>Spring 2024 – UCLA</strong><br>
+		    <em>CS 263: Natural Language Processing</em> — Prof. Nanyun (Violet) Peng<br>
+		    Worked with 3 other TAs and ~110 students. Created and graded assignments, exams, and course project, led discussion sections, and hosted office hours.
+		  </li>
+		
+		  <li>
+		    <strong>Winter 2024 – UCLA</strong><br>
+		    <em>CS 162: Natural Language Processing</em> — Prof. Nanyun (Violet) Peng<br>
+		    Worked with 1 other TA and ~130 students. Created and graded assignments, exams, and course project, led discussion sections, and hosted office hours.
+		  </li>
+		
+		  <li>
+		    <strong>Fall 2023 – UCLA</strong><br>
+		    <em>CS 30: Principles and Practices of Computing</em> — Prof. Todd Millstein<br>
+		    Worked with 1 other TA, 2 LAs, and ~120 students. Graded assignments, led weekly discussion sections, and hosted office hours.
+		  </li>
+		
+		  <li>
+		    <strong>Spring 2022 – Emory University</strong><br>
+		    <em><a href="http://www.cs.emory.edu/~nelsay2/cs377.html" target="_blank" rel="noopener noreferrer">CS 377: Database Systems</a></em> — 
+		    <a href="http://www.cs.emory.edu/~nelsay2/" target="_blank" rel="noopener noreferrer">Prof. Nosayba El-Sayed</a><br>
+		    Worked with 1 other TA and ~40 students. Graded assignments and hosted office hours.
+		  </li>
+		</ul>
 
-      	  <li> In Spring 2024 at UCLA, I was a TA for CS263 (Natural Language Processing), taught by Prof. Nanyun (Violet) Peng. I worked with a team of 3 other TAs and about 110 students, helped create and grade assignments, exams, and course project, led weekly discussion sections, and hosted office hours to support students. </li>
-      	  <li> In Winter 2024 at UCLA, I was a TA for CS162 (Natural Language Processing), taught by Prof. Nanyun (Violet) Peng. I worked with a team of 1 other TA and about 130 students, helped create and grade assignments, exams, and course project, led weekly discussion sections, and hosted office hours to support students. </li>
-      	  <li> In Fall 2023 at UCLA, I was a TA for CS30 (Principles and Practices of Computing), taught by Prof. Todd Millstein. I worked with a team of 1 other TA, 2 LAs, and about 120 students, helped grade assignments, hosted office hours, and led a weekly discussion section.</li>
-          <li> In Spring 2022 at Emory University, I was a TA for <a href="http://www.cs.emory.edu/~nelsay2/cs377.html" target="_blank" rel="noopener noreferrer">CS377</a> (Database Systems), taught by <a href="http://www.cs.emory.edu/~nelsay2/" target="_blank" rel="noopener noreferrer">Prof. Nosayba El-Sayed</a>. I worked with a team of 1 other TA and about 40 students, helped grade assignments, and hosted office hours to support students.</li>
-        </ul>
       </p>
   </p>
     </p>
