--- a/teaching.html
+++ b/teaching.html
@@ -99,10 +99,15 @@
 		    Worked with 1 other TA, 2 LAs, and ~120 students. Graded assignments, led weekly discussion sections, and hosted office hours.
 		  </li>
 		
-		  <li>
+		  <!-- <li>
 		    <strong>Spring 2022 – Emory University</strong><br>
 		    <em><a href="http://www.cs.emory.edu/~nelsay2/cs377.html" target="_blank" rel="noopener noreferrer">CS 377: Database Systems</a></em> — 
 		    <a href="http://www.cs.emory.edu/~nelsay2/" target="_blank" rel="noopener noreferrer">Prof. Nosayba El-Sayed</a><br>
+		    Worked with 1 other TA and ~40 students. Graded assignments and hosted office hours.
+		  </li> -->
+			<li>
+		    <strong>Spring 2022 – Emory University</strong><br>
+		    <em>CS 377: Database Systems</em> — Prof. Nosayba El-Sayed<br>
 		    Worked with 1 other TA and ~40 students. Graded assignments and hosted office hours.
 		  </li>
 		</ul>
@@ -115,7 +120,7 @@
 	 </div>
 
 	  <br>
-<!-- 
+
 <h2>Tutoring</h2>
   <div>
 	<p>
@@ -126,7 +131,7 @@
       </p>
   </p>
     </p>
-     -->
+    
 </div>
 </div>
 </div>
