--- a/teaching.html
+++ b/teaching.html
@@ -51,85 +51,72 @@
  <br>
 
 
-  <h2>Teaching Assistantship</h2>
-  <div>
-	<p>
-	 <p>
-        <ul class="ta-experience">
-		  <li>
-		    <strong>Fall 2025 – UCLA</strong><br>
-		    <em>CS 495: Teaching Assistant Training Seminar</em> — Prof. Sandra Batista<br>
-		    Worked with ~75 students/future TAs, graded assignments, handled course logistics, provided feedback to new TAs, and hosted office hours.  
-		    Appointed year-long <strong>TA Coordinator</strong> (2025–2026).
-		  </li>
-		
-		  <li>
-		    <strong>Spring 2025 – UCLA</strong><br>
-		    <em>CS 131: Programming Languages</em> — Prof. Paul Eggert<br>
-		    Worked with 1 other TA, 4 LAs, and ~120 students. Graded assignments and exams, led weekly discussion sections, and hosted office hours.
-		  </li>
-		
-		  <li>
-		    <strong>Winter 2025 – UCLA</strong><br>
-		    <em>CS 131: Programming Languages</em> — Prof. Paul Eggert<br>
-		    Worked with 1 other TA, 4 LAs, and ~150 students. Graded assignments and exams, led weekly discussion sections, and hosted office hours.
-		  </li>
-		
-		  <li>
-		    <strong>Fall 2024 – UCLA</strong><br>
-		    <em>CS 180: Algorithms and Complexity</em> — Alexis Korb<br>
-		    Worked with 2 other TAs and ~240 students. Graded assignments and exams, led weekly discussion sections, and hosted office hours.
-		  </li>
-		
-		  <li>
-		    <strong>Spring 2024 – UCLA</strong><br>
-		    <em>CS 263: Natural Language Processing</em> — Prof. Nanyun (Violet) Peng<br>
-		    Worked with 3 other TAs and ~110 students. Created and graded assignments, exams, and course project, led discussion sections, and hosted office hours.
-		  </li>
-		
-		  <li>
-		    <strong>Winter 2024 – UCLA</strong><br>
-		    <em>CS 162: Natural Language Processing</em> — Prof. Nanyun (Violet) Peng<br>
-		    Worked with 1 other TA and ~130 students. Created and graded assignments, exams, and course project, led discussion sections, and hosted office hours.
-		  </li>
-		
-		  <li>
-		    <strong>Fall 2023 – UCLA</strong><br>
-		    <em>CS 30: Principles and Practices of Computing</em> — Prof. Todd Millstein<br>
-		    Worked with 1 other TA, 2 LAs, and ~120 students. Graded assignments, led weekly discussion sections, and hosted office hours.
-		  </li>
-		
-		  <!-- <li>
-		    <strong>Spring 2022 – Emory University</strong><br>
-		    <em><a href="http://www.cs.emory.edu/~nelsay2/cs377.html" target="_blank" rel="noopener noreferrer">CS 377: Database Systems</a></em> — 
-		    <a href="http://www.cs.emory.edu/~nelsay2/" target="_blank" rel="noopener noreferrer">Prof. Nosayba El-Sayed</a><br>
-		    Worked with 1 other TA and ~40 students. Graded assignments and hosted office hours.
-		  </li> -->
-			<li>
-			<strong>Spring 2022 – Emory University</strong><br>
-			<em>CS 377: Database Systems</em> — Prof. Nosayba El-Sayed<br>
-			Worked with 1 other TA and ~40 students. Graded assignments and hosted office hours.
-		  </li>
-		</ul>
+<!-- Teaching + Tutoring cleaned block -->
+<h2>Teaching Assistantship</h2>
+<div class="section teaching-assistantship">
+  <ul class="ta-experience">
+    <li>
+      <strong>Fall 2025 – UCLA</strong><br>
+      <em>CS 495: Teaching Assistant Training Seminar</em> — Prof. Sandra Batista<br>
+      Worked with ~75 students/future TAs, graded assignments, handled course logistics, provided feedback to new TAs, and hosted office hours.  
+      Appointed year-long <strong>TA Coordinator</strong> (2025–2026).
+    </li>
 
-     </p>
-	  </p>
-	  
-	  </div>
-	 </div>
+    <li>
+      <strong>Spring 2025 – UCLA</strong><br>
+      <em>CS 131: Programming Languages</em> — Prof. Paul Eggert<br>
+      Worked with 1 other TA, 4 LAs, and ~120 students. Graded assignments and exams, led weekly discussion sections, and hosted office hours.
+    </li>
 
-	  <br>
+    <li>
+      <strong>Winter 2025 – UCLA</strong><br>
+      <em>CS 131: Programming Languages</em> — Prof. Paul Eggert<br>
+      Worked with 1 other TA, 4 LAs, and ~150 students. Graded assignments and exams, led weekly discussion sections, and hosted office hours.
+    </li>
+
+    <li>
+      <strong>Fall 2024 – UCLA</strong><br>
+      <em>CS 180: Algorithms and Complexity</em> — Alexis Korb<br>
+      Worked with 2 other TAs and ~240 students. Graded assignments and exams, led weekly discussion sections, and hosted office hours.
+    </li>
+
+    <li>
+      <strong>Spring 2024 – UCLA</strong><br>
+      <em>CS 263: Natural Language Processing</em> — Prof. Nanyun (Violet) Peng<br>
+      Worked with 3 other TAs and ~110 students. Created and graded assignments, exams, and course project, led discussion sections, and hosted office hours.
+    </li>
+
+    <li>
+      <strong>Winter 2024 – UCLA</strong><br>
+      <em>CS 162: Natural Language Processing</em> — Prof. Nanyun (Violet) Peng<br>
+      Worked with 1 other TA and ~130 students. Created and graded assignments, exams, and course project, led discussion sections, and hosted office hours.
+    </li>
+
+    <li>
+      <strong>Fall 2023 – UCLA</strong><br>
+      <em>CS 30: Principles and Practices of Computing</em> — Prof. Todd Millstein<br>
+      Worked with 1 other TA, 2 LAs, and ~120 students. Graded assignments, led weekly discussion sections, and hosted office hours.
+    </li>
+
+    <li>
+      <strong>Spring 2022 – Emory University</strong><br>
+      <em>CS 377: Database Systems</em> — Prof. Nosayba El-Sayed<br>
+      Worked with 1 other TA and ~40 students. Graded assignments and hosted office hours.
+    </li>
+  </ul>
+</div>
 
 <h2>Tutoring</h2>
-  <div>
-	<p>
-	 <p>
-        <ul>
-          <li> In Spring 2025, I was an <a href="https://www.teachforamerica.org/ignite" target="_blank" rel="noopener noreferrer">Ignite Fellow for Teach for America</a>. I tutored 4 eighth grade students in math four times a week in preparation for their state exam.</li>
-        </ul>
-      </p>
-  </p>
-    </p>
+<div class="section tutoring">
+  <ul>
+    <li>
+      In Spring 2025, I was an 
+      <a href="https://www.teachforamerica.org/ignite" target="_blank" rel="noopener noreferrer">Ignite Fellow for Teach for America</a>.
+      I tutored 4 eighth grade students in math four times a week in preparation for their state exam.
+    </li>
+  </ul>
+</div>
+
     
 </div>
 </div>
