--- a/research.html
+++ b/research.html
@@ -110,14 +110,12 @@
     </p>
 </div>
 	<h2>Trainging Programs</h2>
-<div>
-	<p>
-		<ul>
-		  <li> Cohort member of the 2025 <a href="https://www.aim-ahead.net/programs/aim-ahead-ncats-training-program/" target="_blank" rel="noopener noreferrer">AIM-AHEAD & NCATS Health Data Science Training Program</a>, where my team’s project, Artificial Intelligence Approaches to Clinical Prediction of 60-Day Mortality in Respiratory Infection (RI) with Smoking History: A Retrospective Cohort Study, received the Top Oral Presentation – Instructor’s Choice Award.</li>
-		</ul>
-    </p>
-
-</div>
+		 <div class="training-program">AIM-AHEAD & NCATS Health Data Science Training Program, 2025</div>
+			<p>
+				  Cohort member of the 2025 <a href="https://www.aim-ahead.net/programs/aim-ahead-ncats-training-program/" target="_blank" rel="noopener noreferrer">AIM-AHEAD & NCATS Health Data Science Training Program</a>, where my team’s project, Artificial Intelligence Approaches to Clinical Prediction of 60-Day Mortality in Respiratory Infection (RI) with Smoking History: A Retrospective Cohort Study, received the Top Oral Presentation – Instructor’s Choice Award.
+		    </p>
+		
+		</div>
 </div>
 </div>
   </div>
