--- a/research.html
+++ b/research.html
@@ -49,7 +49,7 @@
 	<br> --> 
 	 
   <h2>Publications</h2>
-  <div>
+  <!-- <div> -->
 	<p class="paper">
 	<span class="title" style="font-weight:400">Re-imagining Virtual Communities: Ethical Guidelines for Studying Black Twitter
           </span>
@@ -108,16 +108,16 @@
           <span>[<a href="https://etd.library.emory.edu/concern/etds/3n2040522" target="_blank" rel="noopener noreferrer">PDF</a>]</span>
   </p>
     </p>
-</div>
-	<h2>Trainging Programs</h2>
-		 <div class="training-program">AIM-AHEAD & NCATS Health Data Science Training Program, 2025</div>
-			<p>
-				  Cohort member of the 2025 <a href="https://www.aim-ahead.net/programs/aim-ahead-ncats-training-program/" target="_blank" rel="noopener noreferrer">AIM-AHEAD & NCATS Health Data Science Training Program</a>, where my team’s project, Artificial Intelligence Approaches to Clinical Prediction of 60-Day Mortality in Respiratory Infection (RI) with Smoking History: A Retrospective Cohort Study, received the Top Oral Presentation – Instructor’s Choice Award.
-		    </p>
-		
-		</div>
-</div>
-</div>
+<!-- </div> -->
+<h2>Trainging Programs</h2>
+	 <div class="training-program">AIM-AHEAD & NCATS Health Data Science Training Program, 2025</div>
+		<p>
+			  Cohort member of the 2025 <a href="https://www.aim-ahead.net/programs/aim-ahead-ncats-training-program/" target="_blank" rel="noopener noreferrer">AIM-AHEAD & NCATS Health Data Science Training Program</a>, where my team’s project, Artificial Intelligence Approaches to Clinical Prediction of 60-Day Mortality in Respiratory Infection (RI) with Smoking History: A Retrospective Cohort Study, received the Top Oral Presentation – Instructor’s Choice Award.
+		</p>
+	
+	</div>
+	</div>
+	</div>
   </div>
 </body>
 </html>
