--- a/research.html
+++ b/research.html
@@ -112,7 +112,7 @@
 <h2>Trainging Programs</h2>
 	 <div class="training-program"><strong>AIM-AHEAD & NCATS Health Data Science Training Program, 2025</strong></div>
 		<p>
-			  Cohort member of the 2025 <a href="https://www.aim-ahead.net/programs/aim-ahead-ncats-training-program/" target="_blank" rel="noopener noreferrer">AIM-AHEAD & NCATS Health Data Science Training Program</a>, where my team’s project, Artificial Intelligence Approaches to Clinical Prediction of 60-Day Mortality in Respiratory Infection (RI) with Smoking History: A Retrospective Cohort Study, received the Top Oral Presentation – Instructor’s Choice Award.
+			  Cohort member of the 2025 <a href="https://www.aim-ahead.net/programs/aim-ahead-ncats-training-program/" target="_blank" rel="noopener noreferrer">AIM-AHEAD & NCATS Health Data Science Training Program</a>, where my team’s project, <em>Artificial Intelligence Approaches to Clinical Prediction of 60-Day Mortality in Respiratory Infection (RI) with Smoking History: A Retrospective Cohort Study</em>, received the Top Oral Presentation – Instructor’s Choice Award.
 		</p>
 	
 	</div>
