--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                   <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-entering-students/eugene-v-cota-robles-fellowship/" target="_blank" rel="noopener noreferrer">Eugene V. Cota-Robles Fellowship</a>
                   and the
                   <a href="https://www.gemfellowship.org/" target="_blank" rel="noopener noreferrer">GEM Fellowship Program</a>.
-                  My research focuses on  <br> <br>
+                  My research focuses on:  <br> <br>
                   <b>(1)</b> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science, <br>
                   <b>(2)</b> the study of <b>dialectical biases</b> in existing machine learning systems, and <br>
                   <b>(3)</b> the assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities.  <br> <br>
@@ -169,7 +169,7 @@
                   <a href="https://grad.ucla.edu/funding/financial-aid/funding-for-entering-students/eugene-v-cota-robles-fellowship/" target="_blank" rel="noopener noreferrer">Eugene V. Cota-Robles Fellowship</a>
                   and the
                   <a href="https://www.gemfellowship.org/" target="_blank" rel="noopener noreferrer">GEM Fellowship Program</a>.
-                  My research focuses on  <br> <br>
+                  My research focuses on:  <br> <br>
                   <b>(1)</b> the application of <b>NLP methodologies for bias mitigation</b> and quantification in social science, <br>
                   <b>(2)</b> the study of <b>dialectical biases</b> in existing machine learning systems, and <br>
                   <b>(3)</b> the assessment and development of <b>community-grounded content moderation approaches</b> to support marginalized digital communities. <br> <br>
